# CppMultiVersion

./: CMakeLists.txt  README.md  main.cpp
cpp23_lib/: CMakeLists.txt  cpp23_lib.cpp  cpp23_lib.h
cpp98_lib/: CMakeLists.txt  cpp98_lib.cpp  cpp98_lib.h
